--- a/littlecakesnl/package.json
+++ b/littlecakesnl/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^12.23.12",
+    "lucide-react": "^0.539.0",
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18"
